# realestate_analytics

./: .gitignore  EDA.ipynb  EDA_2.ipynb  EDA_profiling.ipynb  README.md  app.py  baseline_model.ipynb  data_viz.ipynb  feature_selection.ipynb  insights.ipynb  missing_value.ipynb  model_selection.ipynb  outlier_treatment.ipynb  pyproject.toml  recommender.ipynb  requirements.txt
datasets/: 2025-11-02T23-38_export.csv  location_distance.pkl  missing_value_imputed.csv  outlier_treated.csv  post_feature_selection.csv
pages/: analysis_app.py  price_predictor.py  recommender_system.py
