[project]
name = "realestate-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy<2.2",
    "pandas>=2.3.3",
    "pandas-profiling>=3.0.0",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "sync>=1.0.0",
    "uv>=0.9.7",
    "ydata-profiling>=4.10,<5",
]
